--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-=== Ruby CSS Parser
+= Ruby CSS Parser
 
 Load, parse and cascade CSS rule sets in Ruby.
 
-==== Setup
+=== Setup
 
 Install the gem from RubyGems.
 
@@ -10,7 +10,7 @@ Install the gem from RubyGems.
 
 Done.
 
-==== An example
+=== An example
   require 'css_parser'
   include CssParser
 
@@ -41,18 +41,18 @@ Done.
   => #content { font-size: 13px; line-height: 1.2; }
      body { margin: 0 1em; }
 
-==== Testing
+=== Testing
 
 You can run the suite of unit tests using <tt>rake test</tt>.
 
-The download/import tests require that WEBrick is installed.  The tests set up
+The download/import tests use WEBrick.  The tests set up
 a temporary server on port 12000 and pull down files from the <tt>test/fixtures/</tt> 
 directory.
 
-==== Credits and code
+=== Credits and code
 
-By Alex Dunae (dunae.ca, e-mail 'code' at the same domain), 2007-08.
+By Alex Dunae (dunae.ca, e-mail 'code' at the same domain), 2007-09.
 
-Project homepage: http://code.google.com/p/ruby-css-parser/
+Project homepage: http://github.com/alexdunae/css_parser
 
 Made on Vancouver Island.
