Doc updates pre-1.0.0 release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 === Ruby CSS Parser CHANGELOG
 
+==== Version 1.0.0
+ * Various test fixes and udpate for Ruby 1.9 (thanks to Tyler Cunnion)
+ * Allow setting CSS declarations to nil
+
 ==== Version 0.9
  * Initial version forked from Premailer project
 
