--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,11 @@
 === Ruby CSS Parser CHANGELOG
 
+=== Version 1.1.5
+ * Fix merging of !important declarations
+ 
+=== Version 1.1.4
+ * Ruby 1.9.2 compat
+
 === Version 1.1.3
  * allow limiting by media type in add_block!
 
