--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 === Ruby CSS Parser CHANGELOG
 
+=== Version 1.1.7
+ * Automatically close missing braces at the end of a block
+
 === Version 1.1.6
  * Fix media type handling in add_block! and load_uri!
 
