--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,8 @@
 === Ruby CSS Parser CHANGELOG
 
+=== Version 1.2.5
+ * Fix merging of multiple !important rules to match the spec
+
 === Version 1.2.3
  * First pass of media query support
 
